fix(html): remove too much spaces between icons

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -35,3 +35,7 @@
 .carousel-projects {
     background-color: #f8f9fa !important;
 }
+
+.list-inline-item:not(:last-child) {
+    margin-right: 0.25rem;
+}
